--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,298 @@
-/* место для вашего кода */
+/* шапка */
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding-top: 92px;
+  padding-bottom: 92px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+list-style: none;
+}
+
+.header__link{
+  color: black;
+  text-decoration: underline;
+}
+
+.header__link_active {
+text-decoration: none;
+}
+
+.header__logo {
+  width: 148px;
+}
+
+/* адрес*/
+
+.address {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-style: normal;
+}
+
+.header__address {
+  justify-self: end;
+  max-width: 240px;
+}
+
+/* обложка */
+
+.cover {
+ position: relative;
+ min-height: 757px; 
+ background-image: url(../images/cover.jpg);
+ background-size: cover;
+ background-position: center;
+ padding-top: 165px;
+ padding-left: 50px;
+ padding-right: 50px;
+ padding-bottom: 50px;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+/* заголовок*/
+
+.cover__title {
+  position: relative;
+  color: white;
+  font-size: 100px;
+  text-transform: uppercase;
+  z-index: 2;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+/* описание текста и кнопка*/
+
+.cover__description {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 135px;
+  z-index: 2;
+}
+
+.cover__description-text {
+  color: white;
+  font-size: 22px;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 32px;
+  padding-right: 32px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+/* лоты */
+
+.lots {
+  padding-top: 180px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
+}
+
+.lots__heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 563px;
+}
+
+/* карточка */
+
+.card-link {
+  text-decoration: none;
+  height: 100%;
+  display: block;
+}
+
+.card {
+  height: 100%;
+  position: relative;
+  min-height: 563px;
+  padding-top: 51px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 48px;
+  background-size: cover;
+  background-position: center;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0,0,0,.6);
+}
+
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
+}
+
+.card__title {
+  position: relative;
+  color: white;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  z-index: 2;
+}
+
+.card__text {
+  position: relative;
+  color: white;
+  font-size: 20px;
+  z-index: 2;
+}
+
+/* ===== ссылка ===== */
+
+.lots__look-more-link {
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+/* об аукционе */
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+  padding: 180px 50px 50px;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about__logo-image {
+width: 148px;
+}
+
+.about__title {
+  font-size: 40px;
+text-transform: uppercase;
+margin-bottom: 100px;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  font-size: 20px;
+}
+
+/* подвал сайта */
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 180px 50px 90px;
+  align-items: start;
+}
+
+.footer__address{
+  max-width: 240px;
+}
+
+.footer__links-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.footer__link {
+  font-size: 18px;
+  text-decoration: underline;
+  color: black;
+}
+
+.footer__link-active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+}
