--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@
   display: flex;
   gap: 32px;
   list-style: circle;
+  margin:0;
+  padding: 0;
 }
 
 .header__links-list-item_no-bullit {
@@ -52,6 +54,14 @@ text-decoration: none;
   font-style: normal;
   line-height: 24px;
   color: black;
+}
+
+.address a {
+  color: black;
+}
+
+.address p {
+  margin: 0;
 }
 
 .header__address {
@@ -89,6 +99,8 @@ text-decoration: none;
   font-size: 100px;
   line-height: 115px;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
+  margin: 0 0 20px 0;
   z-index: 2;
 }
 
@@ -112,6 +124,7 @@ text-decoration: none;
   justify-content: space-between;
   align-items: center;
   margin-top: auto;
+  padding-bottom: 10px;
   z-index: 2;
 }
 
@@ -165,7 +178,7 @@ text-decoration: none;
 }
 
 .lots__card-list-item {
-  width: 30%;
+  width: calc((100% - 50px)/3);
   min-height: 563px;
 }
 
@@ -212,22 +225,24 @@ text-decoration: none;
 
 .card__title {
   position: relative;
+  z-index: 2;
   color: white;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 22px;
   line-height: 26px;
   text-transform: uppercase;
   text-decoration: underline;
-  z-index: 2;
+  margin: 0;
 }
 
 .card__text {
   position: relative;
+  z-index: 2;
   color: white;
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 20px;
   line-height: 24px;
-  z-index: 2;
+  margin: 0;
 }
 
 /* ===== ссылка ===== */
@@ -268,10 +283,10 @@ width: 148px;
 }
 
 .about__title {
-font-family: 'Raleway', Arial, sans-serif;
+  font-family: 'Raleway', Arial, sans-serif;
   font-size: 40px;
-text-transform: uppercase;
-margin-bottom: 100px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
 }
 
 .about__text {
@@ -295,7 +310,7 @@ margin-bottom: 100px;
   align-items: start;
 }
 
-.footer__address {
+.footer__address{
   max-width: 240px;
 }
 
