--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 .page {
- max-width: 1100px;
- margin: 0 auto;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
-/* шапка */
+/* ШАПКА */
 
 .header {
   display: grid;
@@ -19,12 +19,12 @@
   display: flex;
   gap: 32px;
   list-style: circle;
-  margin:0;
+  margin: 0;
   padding: 0;
 }
 
 .header__links-list-item_no-bullit {
-list-style: none;
+  list-style: none;
 }
 
 .header__link {
@@ -36,14 +36,14 @@ list-style: none;
 }
 
 .header__link_active {
-text-decoration: none;
+  text-decoration: none;
 }
 
 .header__logo {
   width: 148px;
 }
 
-/* адрес*/
+/*  АДРЕС  */
 
 .address {
   display: flex;
@@ -69,18 +69,19 @@ text-decoration: none;
   max-width: 240px;
 }
 
-/* обложка */
+/* ОБЛОЖКА */
 
 .cover {
- position: relative;
- min-height: 757px;
- background-image: url(../images/cover.jpg);
- background-size: cover;
- background-position: center;
- padding-top: 165px;
- padding-left: 50px;
- padding-right: 50px;
- padding-bottom: 50px;
+  position: relative;
+  min-height: 757px;
+  box-sizing: border-box;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: center;
+  padding-top: 165px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
 }
 
 .overlay {
@@ -90,7 +91,7 @@ text-decoration: none;
   z-index: 1;
 }
 
-/* заголовок*/
+/*  Заголовок  */
 
 .cover__title {
   position: relative;
@@ -99,8 +100,8 @@ text-decoration: none;
   font-size: 100px;
   line-height: 115px;
   text-transform: uppercase;
-  letter-spacing: 0.03em;
-  margin: 0 0 20px 0;
+  letter-spacing: 0.3em;
+  margin: 0 0 135px 0;
   z-index: 2;
 }
 
@@ -116,7 +117,7 @@ text-decoration: none;
   text-align: right;
 }
 
-/* описание текста и кнопка*/
+/*  Описание текста и кнопка  */
 
 .cover__description {
   position: relative;
@@ -151,7 +152,7 @@ text-decoration: none;
   cursor: pointer;
 }
 
-/* лоты */
+/*  ЛОТЫ  */
 
 .lots {
   padding-top: 180px;
@@ -178,11 +179,11 @@ text-decoration: none;
 }
 
 .lots__card-list-item {
-  width: calc((100% - 50px)/3);
+  width: calc((100% - 50px) / 3);
   min-height: 563px;
 }
 
-/* карточка */
+/*  КАРТОЧКИ  */
 
 .card-link {
   text-decoration: none;
@@ -208,7 +209,7 @@ text-decoration: none;
   content: "";
   position: absolute;
   inset: 0;
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .card_type_film {
@@ -245,7 +246,7 @@ text-decoration: none;
   margin: 0;
 }
 
-/* ===== ссылка ===== */
+/* Ссылка */
 
 .lots__look-more-link {
   font-family: 'Raleway', Arial, sans-serif;
@@ -254,7 +255,7 @@ text-decoration: none;
   text-decoration: underline;
 }
 
-/* об аукционе */
+/* ОБ АУКЦИОНЕ  */
 
 .about {
   display: grid;
@@ -279,7 +280,7 @@ text-decoration: none;
 }
 
 .about__logo-image {
-width: 148px;
+  width: 148px;
 }
 
 .about__title {
@@ -301,7 +302,7 @@ width: 148px;
   margin: 0;
 }
 
-/* подвал сайта */
+/*  Подвал сайта */
 
 .footer {
   display: grid;
