--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url("../fonts/fonts.css");
+
 .page {
   max-width: 1100px;
   margin: 0 auto;
@@ -143,7 +145,7 @@
   background-color: transparent;
   border: 1px solid white;
   color: white;
-  font-family: 'Raleway', Arial, sans-srif;
+  font-family: 'Raleway', Arial, sans-serif;
   font-size: 22px;
   padding-top: 12px;
   padding-bottom: 12px;
