--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
-@import url("../fonts/fonts.css");
+body {
+  margin:0;
+  font-family: 'Raleway', Arial, sans-serif;
+}
 
 .page {
   max-width: 1100px;
