--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
-::before,
-::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -16,7 +17,7 @@ h1, h2, h3, p, ul, li {
 }
 
 .page {
-  max-width: 1100px;
+  width: 1100px;
   margin: 0 auto;
 }
 
@@ -92,7 +93,7 @@ h1, h2, h3, p, ul, li {
 
 .cover {
   position: relative;
-  min-height: 757px;
+  height: 757px;
   box-sizing: border-box;
   background-image: url(../images/cover.jpg);
   background-size: cover;
@@ -144,7 +145,7 @@ h1, h2, h3, p, ul, li {
   justify-content: space-between;
   align-items: center;
   margin-top: auto;
-  padding-bottom: 10px;
+  padding-bottom: 0px;
   z-index: 2;
 }
 
@@ -184,7 +185,7 @@ h1, h2, h3, p, ul, li {
   font-family: 'Raleway', Arial, sans-serif;
   font-size: 40px;
   text-transform: uppercase;
-  margin: 0 0 27px 40px;
+  margin: 0 0 30px 40px;
 }
 
 .lots__card-list {
