--- a/styles/style.css
+++ b/styles/style.css
@@ -32,10 +32,12 @@ h1, h2, h3, p, ul, li {
 
 .header__links-list {
   display: flex;
-  flex-direction: column;
-  gap: 22px;
+  flex-direction: row;
+  gap: 32px;
   list-style: circle;
+  padding-left: 20px;
 }
+
 
 .header__links-list-item_no-bullet {
   list-style: none;
@@ -44,10 +46,10 @@ h1, h2, h3, p, ul, li {
 .header__link {
   font-size: 18px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 100%;
   color: #000;
   text-decoration: underline;
-  text-underline-offset: 4px;
+  text-underline-offset: 3px;
 }
 
 .header__link_active {
@@ -163,6 +165,8 @@ h1, h2, h3, p, ul, li {
   margin: 0 0 27px 40px;
   font-size: 40px;
   text-transform: uppercase;
+  text-decoration: none;
+  margin-bottom: 27px;
 }
 
 .lots__card-list {
@@ -176,6 +180,10 @@ h1, h2, h3, p, ul, li {
 .lots__card-list-item {
   width: calc((100% - 50px) / 3);
   min-height: 563px;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
 }
 
 /*  карточка  */
@@ -316,6 +324,14 @@ h1, h2, h3, p, ul, li {
   display: flex;
   justify-content: flex-end;
   gap: 48px;
+}
+
+.footer__social-link {
+  display: block;
+  width: 48px;
+  height: 48px;
+  border: 1px solid #000;
+  border-radius: 50%;
 }
 
 .footer__social-icon {
